src/index.css
body, html {
  background-color:ivory;
  height: 100%;
}

/* #root {
  height: 100%;
} */

/* --------------------- NavBar --------------------- */

nav {
  border-bottom: 1px rgb(4, 69, 70) solid;
  background-color: ivory;
}
.nav-item {
  font-family: Poppins 700;
  font-weight: bold;
  font-size: 1.3rem;
  color: rgb(4, 69, 70);
  
}

.nav-home {
  font-family: Poppins 700;
  font-weight: bold;
  font-size: 3rem;
  color: rgb(4, 69, 70);
}

.nav-item-area {
  transition: ease-out 0.3s;
  position: relative;
  z-index: 1;
  
}

.nav-item-area:before {
  transition: 0.5s all ease;
  position: absolute;
  top: -70%;
  left: 50%;
  right: 50%;
  bottom: -70%;
  opacity: 0;
  content: "";
  border-radius: 3%;
  background-color: rgb(4, 69, 70);
}
.nav-item-area:hover:before {
  transition: 0.5s all ease;
  left: 0;
  right: 0;
  opacity: 1;
  z-index: -1;
}

.nav-item:hover {
  color: white;
}

.ham-tab {
  z-index: 1;
  position: fixed;
  background-color: #0e3529;
  font-size: 1.2em;
  transition: 1s ease;
}

.sm-nav-item {
  cursor: pointer;
}
.sm-nav-item:hover {
  background-color: #061813;
}

/* --------------------- footer --------------------- */
.footer {
  background-color: rgb(4, 69, 70);
  position: relative;
  bottom: 0;
}

i {
  font-size: 1.8em;
}

i:hover {
  color:rgb(43, 139, 103) !important;
}

/* --------------------- HomePage --------------------- */
.main-intro {
  width: 80%;
  /* background-image: url("./images/Nature-bg3.jpg"); */
  height: 30vh;
}

.main-title {
  margin-top: 15vh;
}

.projects-hp {
  height: 40vh;
  color: white;
  background-image: url("./images/coding_bg.PNG") ;
  /* filter: blur(4px);
  -webkit-filter: blur(4px); */
}

h2.projects-title-hp {
  background-color: rgb(51, 51, 51, 0.8);
}

h2.experience-title-hp, h2.about-me-title-hp {
  text-align: center;
}

h2.projects-title-hp:hover, h2.experience-title-hp:hover, h2.about-me-title-hp:hover {
  color: rgb(67, 189, 128);
}

.experience-hp {
  height: 40vh;
  background-color: rgb(3, 42, 43);
}

.about-me-hp {
  height: 40vh;
}


/* --------------------- Experience --------------------- */

.show-tab {
  display: flex;
}

.hide-tab {
  display: none;
}

.btn-toggle:hover {
  color: white;
}

.tab-box {
  margin-right: 10vw;
  margin-left: 5vw;
  height: 40vh;
}

.exp-box {
  width: 10vw !important;
}

/* --------------------- AboutMe --------------------- */
.aboutme-section {
  margin-top: 10vh !important;
  color: rgb(3, 42, 43);
  padding: 10%;
  border-radius: 1%;
}



/* --------------------- Projects --------------------- */

.project-page {
  width: 90%;
}

.cards {
  width: 330px;
  background-color: ivory;
  border: 0px;
}

.card img {
  width: 300px;
  height: 20vh;
}

.container {
  position: relative;
  width: 50%;
}

.container:hover .overlay {
  opacity: 0.9;
}

.fadeInTop {
  -webkit-animation: fadeInTop 2s both;
  -moz-animation: fadeInTop 20s both;
  -o-animation: fadeInTop 20s both;
  animation: fadeInTop 2s both;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #0e3529;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

@-webkit-keyframes fadeInTop {
  0%{
    opacity: 0;
    -webkit-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}
@-moz-keyframes fadeInTop {
  0%{
    opacity: 0;
    -moz-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -moz-transform: translateY(0);
  }
}
@-o-keyframes fadeInTop {
  0%{
    opacity: 0;
    -o-transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    -o-transform: translateY(0);
  }
}
@keyframes fadeInTop {
  0%{
    opacity: 0;
    transform: translateY(-50px);
  }
  100%{
    opacity: 1;
    transform: translateY(0);
  }
}


@media (max-width: 1000px) {
  .rows-container {
    flex-direction: column !important;
  }
}

@media (min-width: 700px){
  .sm-screen-nav {
    display: none;
  }
  
  .ham-tab {
    display: none !important;
  }

  .lg-screen-nav {
    display: flex;
  }
}

@media (max-width: 700px) {
  .sm-screen-nav {
    display: flex;
  }

  .lg-screen-nav {
    display: none;
  }
}

@media (max-width: 900px) {
  .card-container {
    width: 100%;
  }
  .cards {
    width: 100%;
  }
}

/* turn nav bar in hamburger menu */
@media (max-width: 590px) {

}

